<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/fondo2">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/menu_titulo"
    android:id="@+id/textView"
    android:layout_marginTop="20dp"
    android:layout_gravity="center_horizontal"
    android:textColor="#fefefe"
    android:textSize="30dp" />

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_jugar"
        android:id="@+id/jugar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_acerca"
        android:id="@+id/acerca"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_otro"
        android:id="@+id/listaPokemon"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />
</LinearLayout>
