<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33b5e5"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/creditos_desarrollador"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/desarrollador_nombre"
        android:id="@+id/textView4"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <ImageView
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:id="@+id/creditos_imagen"
        android:src="@drawable/pokeball"
        android:layout_weight="0.80"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/creditos_version"
        android:id="@+id/creditos_version"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:layout_marginTop="20dp" />
</LinearLayout>